fix: fix overflow hidden for admin page

--- a/web/src/assets/css/main.styl
+++ b/web/src/assets/css/main.styl
@@ -18,6 +18,10 @@ body {
 }
 
 .admin-home {
+  overflow hidden
+  position relative
+  height 100vh
+
   a {
     text-decoration: none
   }
@@ -40,10 +44,11 @@ body {
       box-sizing: border-box;
 
       .container {
-        padding: 30px;
+        padding: 15px 20px 30px 20px;
         background: #fff;
         border: 1px solid #ddd;
         border-radius: 5px;
+        margin-bottom 80px
 
         .handle-box {
           margin-bottom: 20px;
